desktop article done, bugs on mobile article

--- a/css/_section.scss
+++ b/css/_section.scss
@@ -6,22 +6,23 @@
         overflow: hidden;
         h1{
             text-align: center;
-            margin-top: 160px;
+            margin-top: 150px;
         }
         .articles{
             display: flex;
             flex-direction: row;
             
             .desktop-article-paragraph{
-                margin-left: 165px;
-                width: 550px;
-                height: 200px;
+                margin-left: 5%;
+                width: 600px;
+                height: 400px;
                 .first-h{
-                    margin-top: 127px;
+                    margin-top: 0px;
                     
                 }
+                
                 .second-h{
-                    margin-top: 90px;
+                    margin-top: 0px;
                 }
             }
             .desktop-pic{
@@ -35,11 +36,68 @@
         }
     }
 
+    .second-desktop-article{
+        display: flex;
+        flex-direction: row;
+        margin-top: 90px;
+        background-image: url("/images/bg-pattern-circles.svg"), linear-gradient($verydarkdesaturatedblue, $verydarkgrayblue);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-position-y: 80%;
+        background-position-x: -60%;
+        width: 100%;
+        border-radius: 0px 100px 0px 100px;
+        height: 400px;
+        .img-div{
+            img{
+            margin-left: 5%;
+            margin-top: -10%;
+        }
+        }
+        .paragraph-div{
+            width: 550px;
+            margin-left: 5%;
+            margin-top: 5%;
+            
+            h1{
+                color: $white;
+                
+            }
+            p{
+               color: $white;
+            
+            }
+        }
+    }
+    
+    .third-desktop-article{
+        display: flex;
+        overflow: hidden;
+        .div-img{
+            width: 100%;
+            margin-top: 10%;
+            img{   
+                margin-left: -25%;      
+                width: 100%;
+                min-height: 470px;
+                min-width: 550;
+            }
+        }
+        .div-paragraph{
+            margin-top: 20%;
+            width: 100%;
+           margin-right: 5%; 
+        }
+    }
+    
+    
+
 
 
 // mobile section
 
 .first-mobile-article{
+    width: 750px;
     .mobile-section-h1{
         text-align: center;
         margin-top: 215px;
@@ -52,12 +110,44 @@
     .mobile-article-paragraph{
         
         text-align: center;
+        margin-left: 10%;
+        margin-right: 10%;
         
         .mobile-section-h1-2{
-            font-size: 35px;
+            font-size: 50px;
+            width: auto;
+            
+            
         }
         p{
-            font-size: 36px;
+           font-size: 40px; 
+        }
+        .mobile-section-h1-3{
+            font-size: 50px;
+            margin-top: 110px;
         }
     }
+}
+
+article{
+
+        .mobile-article-phones-img{
+        margin-left: 19%;
+        z-index: 1;
+        margin-bottom: -70%;  
+        
+    }
+
+        .second-mobile-article{
+    background-image: url("/images/bg-pattern-circles.svg"), linear-gradient($verydarkdesaturatedblue, $verydarkgrayblue);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position-y: -90%;
+    background-position-x: 50%;
+    width: 750px;
+    border-radius: 0px 100px 0px 100px;
+    height: 1250px;
+    
+}
+    
 }
