--- a/css/style.css
+++ b/css/style.css
@@ -498,7 +498,7 @@ li {
 
 .first-desktop-article h1 {
   text-align: center;
-  margin-top: 160px;
+  margin-top: 150px;
 }
 
 .first-desktop-article .articles {
@@ -512,17 +512,17 @@ li {
 }
 
 .first-desktop-article .articles .desktop-article-paragraph {
-  margin-left: 165px;
-  width: 550px;
-  height: 200px;
+  margin-left: 5%;
+  width: 600px;
+  height: 400px;
 }
 
 .first-desktop-article .articles .desktop-article-paragraph .first-h {
-  margin-top: 127px;
+  margin-top: 0px;
 }
 
 .first-desktop-article .articles .desktop-article-paragraph .second-h {
-  margin-top: 90px;
+  margin-top: 0px;
 }
 
 .first-desktop-article .articles .desktop-pic .desktop-article-pic {
@@ -530,6 +530,74 @@ li {
   height: auto;
   margin-left: 30%;
   margin-top: -17%;
+}
+
+.second-desktop-article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-top: 90px;
+  background-image: url("/images/bg-pattern-circles.svg"), -webkit-gradient(linear, left top, left bottom, from(#3f4164), to(#2c2d3f));
+  background-image: url("/images/bg-pattern-circles.svg"), linear-gradient(#3f4164, #2c2d3f);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position-y: 80%;
+  background-position-x: -60%;
+  width: 100%;
+  border-radius: 0px 100px 0px 100px;
+  height: 400px;
+}
+
+.second-desktop-article .img-div img {
+  margin-left: 5%;
+  margin-top: -10%;
+}
+
+.second-desktop-article .paragraph-div {
+  width: 550px;
+  margin-left: 5%;
+  margin-top: 5%;
+}
+
+.second-desktop-article .paragraph-div h1 {
+  color: white;
+}
+
+.second-desktop-article .paragraph-div p {
+  color: white;
+}
+
+.third-desktop-article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+}
+
+.third-desktop-article .div-img {
+  width: 100%;
+  margin-top: 10%;
+}
+
+.third-desktop-article .div-img img {
+  margin-left: -25%;
+  width: 100%;
+  min-height: 470px;
+  min-width: 550;
+}
+
+.third-desktop-article .div-paragraph {
+  margin-top: 20%;
+  width: 100%;
+  margin-right: 5%;
+}
+
+.first-mobile-article {
+  width: 750px;
 }
 
 .first-mobile-article .mobile-section-h1 {
@@ -545,13 +613,39 @@ li {
 
 .first-mobile-article .mobile-article-paragraph {
   text-align: center;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .first-mobile-article .mobile-article-paragraph .mobile-section-h1-2 {
-  font-size: 35px;
+  font-size: 50px;
+  width: auto;
 }
 
 .first-mobile-article .mobile-article-paragraph p {
-  font-size: 36px;
+  font-size: 40px;
+}
+
+.first-mobile-article .mobile-article-paragraph .mobile-section-h1-3 {
+  font-size: 50px;
+  margin-top: 110px;
+}
+
+article .mobile-article-phones-img {
+  margin-left: 19%;
+  z-index: 1;
+  margin-bottom: -70%;
+}
+
+article .second-mobile-article {
+  background-image: url("/images/bg-pattern-circles.svg"), -webkit-gradient(linear, left top, left bottom, from(#3f4164), to(#2c2d3f));
+  background-image: url("/images/bg-pattern-circles.svg"), linear-gradient(#3f4164, #2c2d3f);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position-y: -90%;
+  background-position-x: 50%;
+  width: 750px;
+  border-radius: 0px 100px 0px 100px;
+  height: 1250px;
 }
 /*# sourceMappingURL=style.css.map */
